Control paramerters and switches added

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -186,6 +186,7 @@ set(msg_files
 	TaskStackInfo.msg
 	TecsStatus.msg
 	TelemetryStatus.msg
+	ThrustVectoringAttitudeStatus.msg
 	TiltrotorExtraControls.msg
 	TimesyncStatus.msg
 	TrajectoryBezier.msg
