--- a/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
@@ -90,6 +90,8 @@ px4_add_romfs_files(
 	10017_jmavsim_iris
 	10018_gazebo-classic_iris_foggy_lidar
 	10019_gazebo-classic_omnicopter
+	10021_gazebo-classic_iris_4edf
+
 	10030_gazebo-classic_px4vision
 
 	10040_sihsim_quadx
