--- a/src/modules/control_allocator/module.yaml
+++ b/src/modules/control_allocator/module.yaml
@@ -75,6 +75,26 @@ parameters:
                 6: Z_axis_ccw
                 7: Z_axis_cw
             default: 0
+        CA_INDEX:
+            description:
+                  short: Index of tilt servo
+                  long: Index to be used in the control allocation matrix
+            type: enum
+            values:
+                0: '0'
+                1: '1'
+                2: '2'
+                3: '3'
+                4: '4'
+                5: '5'
+                6: '6'
+                7: '7'
+                8: '8'
+                9: '9'
+                10: '10'
+                11: '11'
+                12: '12'
+            default: 0
         # *** END ***
 ###############################################################################################
         # Motor parameters
@@ -155,6 +175,7 @@ parameters:
                 11: '11'
                 12: '12'
             default: 0
+
         CA_ROTOR${i}_PX:
             description:
                 short: Position of rotor ${i} along X body axis relative to center of gravity
@@ -442,7 +463,6 @@ parameters:
             num_instances: *max_num_tilts
             instance_start: 0
             default: 0
-
         # helicopter
         CA_SP0_COUNT:
             description:
@@ -1219,28 +1239,28 @@ mixer:
                       standard:
                         position: [ 'CA_ROTOR${i}_PX', 'CA_ROTOR${i}_PY', 'CA_ROTOR${i}_PZ' ]
                       extra:
-                        - name: 'CA_ROTOR${i}_CT'
-                          label: "Thrust\nCoefficient"
                         - name: 'CA_ROTOR${i}_KM'
                           label: 'Direction CCW'
                           function: 'spin-dir'
                           show_as: 'true-if-positive'
+                        - name: 'CA_ROTOR${i}_CT'
+                          label: "Thrust\nCoefficient"
                         - name: 'CA_ROTOR${i}_TILT'
                           label: 'Tilted by'
                   - actuator_type: 'servo'
                     group_label: 'Tilt Servos'
                     count: 'CA_SV_TL_COUNT'
                     item_label_prefix: 'Tilt ${i}'
-                    parameters:
-                        - name: 'CA_TILTING_TYPE'
-                          label: 'Tilting drone type'
                     per_item_parameters:
-                      extra:
-                        - name: 'CA_SV_TL${i}_MINA'
-                          label: "Angle at Min\nTilt"
-                        - name: 'CA_SV_TL${i}_MAXA'
-                          label: "Angle at Max\nTilt"
-                        - name: 'CA_SV_TL${i}_TD'
-                          label: 'Tilt Direction'
+                        extra:
+                          - name: 'CA_SV_TL${i}_MINA'
+                            label: "Angle at Min\nTilt"
+                          - name: 'CA_SV_TL${i}_MAXA'
+                            label: "Angle at Max\nTilt"
+                          - name: 'CA_SV_TL${i}_TD'
+                            label: 'Tilt Direction'
+                          - name: 'CA_SV_TL${i}_CT'
+                            label: 'Use for Control'
+
             # *** END-CUSTOM ***
 ###############################################################################################
