--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
 [submodule "Tools/simulation/gazebo-classic/sitl_gazebo-classic"]
 	path = Tools/simulation/gazebo-classic/sitl_gazebo-classic
 	url = https://github.com/rjros/Thrust_Vector_gazebo.git
-	branch= Tilting
+	branch= main
 
 [submodule "src/drivers/gps/devices"]
 	path = src/drivers/gps/devices
