--- a/.gitmodules
+++ b/.gitmodules
@@ -10,10 +10,10 @@
 	path = Tools/simulation/jmavsim/jMAVSim
 	url = https://github.com/PX4/jMAVSim.git
 	branch = main
-# [submodule "Tools/simulation/gazebo-classic/sitl_gazebo-classic"]
-# 	path = Tools/simulation/gazebo-classic/sitl_gazebo-classic
-# 	url = https://github.com/rjros/Thrust_Vector_gazebo.git
-# 	branch= main
+[submodule "Tools/simulation/gazebo-classic/sitl_gazebo-classic"]
+	path = Tools/simulation/gazebo-classic/sitl_gazebo-classic
+	url = https://github.com/rjros/Thrust_Vector_gazebo.git
+	branch= main
 
 [submodule "src/drivers/gps/devices"]
 	path = src/drivers/gps/devices
